<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>eskf_cpp</name>
  <version>1.0.0</version>
  <description>
    Error-State Kalman Filter (ESKF) for Visual Guidance.
    Based on "High-Speed Interception Multicopter Control by Image-Based Visual Servoing"
    by Kun Yang et al.
  </description>
  
  <maintainer email="your.email@example.com">Developer</maintainer>
  <license>MIT</license>
  
  <url type="website">https://github.com/your-repo/eskf_cpp</url>
  <url type="bugtracker">https://github.com/your-repo/eskf_cpp/issues</url>
  
  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  
  <!-- Build dependencies -->
  <build_depend>eigen3_cmake_module</build_depend>
  <depend>eigen</depend>
  <depend>yaml-cpp</depend>
  
  <!-- ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  
  <!-- Message generation -->
  <member_of_group>rosidl_interface_packages</member_of_group>
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
